--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore  ."
+    "format:fix": "prettier --write --ignore-path .gitignore  .",
+
+    "migrate:show": "dotenv -e .env.local -- npx prisma migrate status",
+    "migrate:generate": "dotenv -e .env.local -- npx prisma migrate dev -n init",
+    "migrate:run": "dotenv -e .env.local -- npx prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^4.14.0",
@@ -24,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "autoprefixer": "^10.4.4",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.0.5",
     "eslint-config-prettier": "^9.0.0",
